career를 끝내버리고 싶다

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,19 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-
+    <string name="detail_dialog">서울 크리에이터 어워즈\n
+        ■ 내 용 : 창의적 크리에이터 선발 아이디어 경진대회\n
+        ■ 참가자격 : 크리에이터 누구나(프리랜서, 스타트업, 중소기업, 대기업, 아티스트, 엔터프라이즈, 비영리단체 등)\n
+        ■ 참가신청 : 위워크 크리에이터 어워즈 웹사이트\n
+        ■ 신청기한 : 2019. 1. 10.까지\n
+        ■ 신청방법 : 크리에이터 어워즈 지원 이유 및 포부, 상금 활용 계획 등을 담은 90초 분량의 영상 촬영 업로드\n
+        ■ 시상부분\n
+        1) 벤처기업상 : 혁신적인 아이디어 보유하는 창업가 또는 기업\n
+        ※ 상금 : 미화 72,000달러~360,000달러(한화 약8,000만~4억300만원)\n
+        2) 비영리단체상 : 자선단체 또는 비영리단체\n
+        ※ 상금 : 미화 72,000달러~130,000달러(한화 약8,000만~1억4,500만원)\n
+        3) 공연예술상 : 자신만의 독특한 관점을 가진 엔터테이너 및 그룸\n
+        ※ 상금 : 미화 18,000~72,000달러(한화 약2,000만~8,000만원)\n
+        ■ 문의처 : creatorawards@wework.com\n
+        공모전 대외활동 사이트 : 위비티 https://www.wevity.com\n</string>
 </resources>
